@@ -1,5 +1,11 @@
 2009-04-02  David Ayers  <ayers@fsfe.org>
 
+	PR objc/18456
+	* objc.dg/bad-receiver-type-2.m: New test contributed by
+	Alexander Mamberg.
+
+2009-04-02  David Ayers  <ayers@fsfe.org>
+
 	PR objc/27377
 	* objc.dg/conditional-1.m: New tests.
 	
